alignment issue of All we see

--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,7 @@ background:url(../apply-3.jpg) no-repeat center;
   }
 
   .section1 .rightside p{
-    margin-left: 30px;
+    margin-left: 20px;
   }
 
   .section1 .rightside video{
